rev 13-Aug_27-12_08

6 June
Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
2.6.6 is the final FCKeditor before the change-over to CKeditor.  The upgrade required bringing the ie and gecko 
javascript files into sync, in particular so that the image and link dialogs open to a larger size.
This upgrade will now be designated fckgLite 07.

7 June 
Added configuration options for turning SCAYT on and off, setting it as auto,  and for selecting SCAYT language . 
Hide language selection button for SpellerPages spell checker when SCAYT is in effect.

9 June
Converted Arabic language file for fckg editing window from BOM to non-BOM (Corrupted image display).
Enabled overflow and scrolling in SCAYT dialog.

10 June
Increased sizes of link and image dialog windows in gecko. Adjusted font sizes in link.html

11 June 
Corrected url in Anteater safe encodig message (meta.php)

5 July 2012
Fix to FCKEditor fck_link.js for IE9, where FCKeditor's Selection.SelectNode() fails to insert link at 
cursor position if text not previously selected. This only comes into play if fckgLite is prevent from
auto-switching IE to IE8 compatibility while in editing mode.

7 July 2012
Fix to FCKeditor fck_image.js for IE9, where FCK.InsertElement failed to insert image at
cursor. (See fck_link 5 July 2012).

9 July
Removed some unnecessary files from distribution and comproessed  old Changs files to zip.

Confined IE image and link fixes to IE9 since FCKeditor will not load in IE10.  Users of IE10
where templates force Standards Mode will have to manually switch to compatibilty mode.
In other cases, fckgLite auto-switches to IE8 compatibility,

23 August
Fixed for smileys in lists where CR was lost if smiley was in li

24 August
fckeditor/dwsmileys.php: set alternate path for ajax access to smiley.conf in debian and ubuntu

25 August