@@ -146,7 +146,7 @@ window.onload = function()
 <div id="folder_hint_icons">
 <table cellspace='2'>
 <tr><td>
-Move: <span id='is_mac'>Ctrl</span>+<img alt="trash" src="images/trash.png"><br />
+<span fckLang="DlgFileBrowserMoveLabel">move </span><span id='is_mac'>Ctrl</span>+<img alt="trash" src="images/trash.png"><br />
 </td></tr>
 <tr><td>
 <img height="16" alt="" src="images/FolderOpenedRO.gif" width="15"> <span fckLang="DlgFileBrowserRead">read-only</span><br>
