@@ -137,7 +137,8 @@ function big_image(id) {
     }
 
     var element = '<img border = "0" src = "' + oImg.src + '" width = "' + width + '" height="' + height + '">';     
-    element += '<center><br /><button class="bigwin_close_but" onclick="OpenFile(\''+ ProtectPath(oImg.fileUrl) +'\');void 0;">insert into document<\/button><\/center>';
+    element += '<center><br /><button class="bigwin_close_but" onclick="OpenFile(\''+ ProtectPath(oImg.fileUrl) +'\');void 0;">'  
+    + translateItem('DlgImgInsert', 'insert into document') +  '<\/button><\/center>';
     var big_win = document.getElementById('bigwin_display');
     big_win.innerHTML = element;
     big_win = document.getElementById('big_imagewin');
@@ -258,7 +259,7 @@ function UnlinkFile(evt,f) {
 var evt = (evt) ? evt : ((window.event) ? event : null);
 
     if(evt && (evt.ctrlKey||evt.metaKey)) {
-        move_to = window.prompt('Subdirectory of current directory to which you want to move ' + f, "secure");
+        move_to = window.prompt(translateItem('FolderMovePrompt','Subdirectory of Current Directory to which you want to move ') + f, "secure");
         if(move_to) {
             move_to = move_to.replace(/^[\/\s]+/,"");
             move_to = move_to.replace(/[\/\s]+$/,"");
