@@ -160,7 +160,7 @@ window.onload = function()
 <table>
 <tr>
 <td rowspan='3'>
-Move<br />
+<span fckLang="DlgFileBrowserMoveLabel">move</span><br />
 <span id='is_mac'>Ctrl</span>+<img alt="trash" src="images/trash.png">&nbsp;
 </td>
 </tr>
