@@ -46,7 +46,7 @@ InsertLink			: "Link invoegen/wijzigen",
 RemoveLink			: "Link verwijderen",
 VisitLink			: "Link volgen",
 Anchor				: "Interne link",
-AnchorDelete		: "Anker verwijderen",
+AnchorDelete		: "Interne link verwijderen",
 InsertImageLbl		: "Afbeelding",
 InsertImage			: "Afbeelding invoegen/wijzigen",
 InsertFlashLbl		: "Flash",
@@ -86,6 +86,7 @@ ShowTableBorders	: "Randen tabel weergeven",
 ShowDetails			: "Details weergeven",
 Style				: "Stijl",
 FontFormat			: "Opmaak",
+FontFormats			: "Hoofdingen",
 Font				: "Lettertype",
 FontSize			: "Grootte",
 TextColor			: "Tekstkleur",
@@ -97,8 +98,8 @@ SpellCheck			: "Spellingscontrole",
 UniversalKeyboard	: "Universeel toetsenbord",
 PageBreakLbl		: "Pagina-einde",
 PageBreak			: "Pagina-einde invoegen",
-NestedNumberedList  : "Invoegen geneste genummerde lijst",
 InsertFootnote      : "Aanmaken/Bewerken Voetnota\'s",
+ScaytTitle          : "Spelling Check",
 
 Form			: "Formulier",
 Checkbox		: "Aanvinkvakje",
@@ -169,7 +170,7 @@ VisitLinkBlocked	: "Het was niet mogelijk een nieuw venster te openen. Controlee
 DlgBtnOK			: "OK",
 DlgBtnCancel		: "Annuleren",
 DlgBtnClose			: "Afsluiten",
-DlgBtnBrowseServer	: "Bladeren op server",
+DlgBtnBrowseServer	: "Bladeren op server/Opladen",
 DlgAdvancedTag		: "Geavanceerd",
 DlgOpOther			: "<Anders>",
 DlgInfoTab			: "Informatie",
@@ -296,16 +297,23 @@ DlnLnkMsgNoEMail	: "Geef een e-mailadres",
 DlnLnkMsgNoAnchor	: "Selecteer een interne link",
 DlnLnkMsgInvPopName	: "De naam van de popup moet met een alfa-numerieke waarde beginnen, en mag geen spaties bevatten.",
 
-DlgLnkQS            : "Zoekopdracht String (tekenreeks) (Voorbeeld: value_1=1&value_2='abc')",
+DlgLnkQS            : "Tekenreeks Zoekopdracht (Voorbeeld: waarde_1=1&waarde_2='abc')",
 DlgnLnkMsgNoWikiFile: "Geef bestandsnaam voor je interne link",
 DlgnLnkMsgQSErr     : "Foutief opgemaakte zoekopdracht String element(en). Druk Annuleren om te corrigeren:",
 
 DlgLnkIntText		: "Geef DokuWiki naamruimte of selecteer in de bestandsverkenner.",
+DlgLnkIntExtras     : "Om een String (tekenreeks) zoekopdracht te maken en/of een interne link naar Dokuwiki hoofdingen klik op de <b>Geavanceerd</b> tab.",
 DlgLnkIntExample	: "Voorbeeld: <i>:directory:directory:file</i>",
 DlgLnkMimeText		: "Geef DokuWiki naamruimte of selecteer in de bestandsverkenner.",
 DlgLnkMimeExample	: "Voorbeeld: <i>:directory:directory:zipfile.zip",
 DlgLnkSambaText		: "Geef de gedeelde naam.",
 DlgLnkSambaExample	: "Voorbeeld: \\\\Server\\\directory_path\\file",
+DlgLnkCreateAnchors : "Aanmaken interne links van Dokuwiki Hoofdingen",
+DlgLnkQSExample     : "String (tekenreeks) Zoekopdracht (vb: waarde_1=1&waarde_2=2)",
+DlgLnkGetHeaders    : "Ophalen Hoofdingen",
+DlgLnkCancelHeaders : " . .annuleren",
+DlgLnkHeadersMenuTitle: "Hoofding Menu",
+DlgLnkNoHeadersFound: "Geen Hoofdingen Gevonden",
 
 //File Browser
 DlgFileBrowserSelect: "Selecteer een bestand op je computer",
@@ -507,7 +515,7 @@ VKIllustrationText: '<b>Functies op de bovenste rij van links naar rechts</b><br
                     + '2. Klikken op het spoorwegteken (#) opent en sluit het numeriek toetsenbord<br />'
                     + '3. De opwaartse en neerwaartse pijlen rechts naast het spoorwegteken wijzigen de grootte van het toetsenbord en het lettertype<br />'
                     + '4. In fckgLite heeft de "Clear" knop geen functie.',
-
+VKeyboardIllustrations: "Illustraties",
 
 // Color Picker
 ColorAutomatic	: "Automatisch",
