@@ -1,4 +1,4 @@
-rev 13-Aug_27-12_08
+rev 13-Aug_29-08_40
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -256,3 +256,6 @@ cleaned up fckeditor unused plugins and replaced nested list plugins with FCKedi
 
 27 Aug
 Interwiki links: preserve lost forward slashes and query strings
+
+28 Aug
+Added language strings and FCKLang refs for file browser
